// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Radio matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-hIWLRp-color-primary c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-eDpIpt-cv decaRadio-input"
      id="1"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-boLhOk-size-md c-gpKKJQ-hqEieG-isDisabled-false c-gpKKJQ-jQVVMl-cv"
      for="1"
    >
      <div
        class="decaRadio-circle"
      />
      Label Text
    </label>
  </div>
</DocumentFragment>
`;

exports[`components/Radio renders all colors 1`] = `
<DocumentFragment>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-hIWLRp-color-primary c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-eDpIpt-cv decaRadio-input"
      id="1"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-boLhOk-size-md c-gpKKJQ-hqEieG-isDisabled-false"
      for="1"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-bEiFsv-color-secondary c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-ekuowN-cv decaRadio-input"
      id="1"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-boLhOk-size-md c-gpKKJQ-hqEieG-isDisabled-false"
      for="1"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-jftABy-color-success c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-eWAPfR-cv decaRadio-input"
      id="1"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-boLhOk-size-md c-gpKKJQ-hqEieG-isDisabled-false"
      for="1"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-iPWTSD-color-warning c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-cKVzQN-cv decaRadio-input"
      id="1"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-boLhOk-size-md c-gpKKJQ-hqEieG-isDisabled-false"
      for="1"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-jbDGbB-color-error c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-evnrkN-cv decaRadio-input"
      id="1"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-boLhOk-size-md c-gpKKJQ-hqEieG-isDisabled-false"
      for="1"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
</DocumentFragment>
`;

exports[`components/Radio renders all sizes 1`] = `
<DocumentFragment>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-hIWLRp-color-primary c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-eDpIpt-cv decaRadio-input"
      id="1"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-biyOBk-size-sm c-gpKKJQ-hqEieG-isDisabled-false"
      for="1"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-hIWLRp-color-primary c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-eDpIpt-cv decaRadio-input"
      id="1"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-boLhOk-size-md c-gpKKJQ-hqEieG-isDisabled-false"
      for="1"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-hIWLRp-color-primary c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-eDpIpt-cv decaRadio-input"
      id="1"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-fEMOrJ-size-lg c-gpKKJQ-hqEieG-isDisabled-false"
      for="1"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
</DocumentFragment>
`;
